# poductivity

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PLAN.md  docker-compose.preview.yml  docker-compose.yml  huberman_davidson_meditation.md  pyproject.toml  skills-lock.json  subscription_list.md  test_pipeline.py
.github/workflows/: deploy-production.yml  preview-cleanup.yml  preview-deploy.yml
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: Home.css  Home.jsx  News.css  News.jsx  Thinking.css  Thinking.jsx
scripts/: batch_transcribe.py  batch_translate_run.py  deploy.sh
src/: cli.py  config.py  models.py  pipeline.py  scheduler.py  web.py
src/delivery/: email.py
src/fetchers/: base.py  podcast.py  substack.py  youtube.py
src/summarizer/: llm.py
src/transcriber/: groq_whisper.py
static/: index.html
static/assets/: index-BtbR5nzN.js  index-CnZjlWCp.js  index-DQWngbLC.css
templates/: email_digest.html
