[project]
name = "content-digest"
version = "0.1.0"
description = "Personal content aggregation and AI summarization tool"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "youtube-transcript-api>=0.6.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
digest = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
